--- a/DEV207.1x-Programming-in-f-sharp/introduction-my-first-app.fsproj
+++ b/DEV207.1x-Programming-in-f-sharp/introduction-my-first-app.fsproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
-    <Name>DEV207.1x-Programming-in-f-sharp</Name>
+    <Name>introduction-my-first-app</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
